Correct alignment of impression button

--- a/style/view-article.css
+++ b/style/view-article.css
@@ -77,6 +77,7 @@
 .impressions-container {
     display: flex;
     align-items: center;
+    justify-content: center;
 }
 .impressions-container .icon {
     height: 55px;
